# genesis_drones

./: .gitignore  CMakeLists.txt  INSTRUCTION.md  README.md  package.xml
doc/: controller_theory.md
doc/.obsidian/: workspace.json
experiments/: .clinerules  ccbf.md  develop.md  develop_dynamics.md  develop_kinematics.md  integrated.md  misc.md  pcl_cbf.md  plot_potential_functions.py  point_cbf.md  prob_analysis.md
experiments/.obsidian/: hotkeys.json  workspace.json
experiments/doc/: develop_kinematics.md  material.md  pcl_ccbf.md  prob_analysis.md  simulation.md
experiments/se3_drone_simulator/: cbf_se3.py  drone.py  main.py  run.sh  run_dynamics_test.sh  run_multi_drones.sh  run_single_drone.sh  simulator.py  single_drone_demo.py  test_cbf_se3.py  test_dynamics_fixed_input.py  visualization.py
experiments/se3_drone_simulator/multi_drones/: config.py  controller.py  main.py  setup.py  trajectory_generator.py  utils.py
experiments/se3_drone_simulator/single_drone/: __init__.py  controller.py  hocbf_visualizer.py  utils.py  (+2 more)
genesis_drones/: __init__.py  keyboard_control_node.py  multi_drone_simulation.py
genesis_drones/controllers/: __init__.py  base_controller.py  ctbr_controller.py  dsl_pid_controller.py  flight_controller.py  hybrid_controller.py  pid_controller.py  velocity_controller.py
genesis_drones/simulation/: __init__.py  camera_manager.py  controller_response_simulator.py  drone_manager.py  simulation_node.py  tf_publisher.py
genesis_drones/urdf/: crazyflie.urdf.xacro  crazyflie2.urdf.xacro  crazyflie_camera.urdf.xacro
genesis_drones/utils/: __init__.py  camera_utils.py  common_utils.py  parameter_optimizer.py  plot_manager.py  simulation_utils.py  tf_utils.py  timing_utils.py  visualization_utils.py  waypoint_utils.py
launch/: manual_control.launch.py  multi_drone_simulation.launch.py  velocity_control.launch.py
scripts/: cb  circle_formation.py  controller_test.py  fly_route_camera.py  fly_route_camera_sphere_single.py  multi_drone_simulation  quadcopter_controller.py  velocity_tracking_plot.py
(+7 files in other folders)
